--- a/templates/index.html
+++ b/templates/index.html
@@ -727,6 +727,7 @@
         // Beim Einschalten des Systems Softstart starten
         function togglePower() {
             var powerState = document.getElementById("masterPowerSwitch").checked;  // Hole den Schalterstatus
+            var switchEl = document.getElementById("masterPowerSwitch");
         
             fetch("/toggle_power", {
                 method: "POST",
@@ -738,11 +739,27 @@
             .then(response => response.json())
             .then(data => {
                 console.log("Power state changed:", data.message);
+                if (typeof data.power !== "undefined") {
+                    switchEl.checked = data.power;
+                }
             })
             .catch(error => {
                 console.error("Error changing power state:", error);
+                switchEl.checked = !powerState;
             });
 	}
+
+        function updatePowerStatus() {
+            fetch("/power_status")
+                .then(response => response.json())
+                .then(data => {
+                    var switchEl = document.getElementById("masterPowerSwitch");
+                    if (typeof data.power !== "undefined") {
+                        switchEl.checked = data.power;
+                    }
+                })
+                .catch(error => console.error("Fehler beim Abrufen des Power-Status:", error));
+        }
 
     function updatePingStatus() {
         fetch('/ping_status')
@@ -770,7 +787,9 @@
             });
     }
     setInterval(updatePingStatus, 2000);
+    setInterval(updatePowerStatus, 2000);
     window.addEventListener('DOMContentLoaded', updatePingStatus);
+    window.addEventListener('DOMContentLoaded', updatePowerStatus);
     </script>
 <a href="http://192.168.178.127:5001">debug</a>
 
